--- a/.github/workflows/Multiple Source Check.yml
+++ b/.github/workflows/Multiple Source Check.yml
@@ -20,7 +20,7 @@ jobs:
     env:
       REPO_URL_Lede: https://github.com/coolsnowwolf/lede
       REPO_BRANCH_Lede: master
-      REPO_PATH_Lede : "lede"
+      REPO_PATH_Lede: "lede"
     steps:
     - name: Get Commit Hash
       id: getHash
@@ -61,7 +61,7 @@ jobs:
     env:
       REPO_URL_HelloWorld: https://github.com/fw876/helloworld
       REPO_BRANCH_HelloWorld: master
-      REPO_PATH_HelloWorld : "helloworld"
+      REPO_PATH_HelloWorld: "helloworld"
     steps:
     - name: Get Commit Hash
       id: getHash
@@ -102,7 +102,7 @@ jobs:
     env:
       REPO_URL_OpenClash: https://github.com/vernesong/OpenClash
       REPO_BRANCH_OpenClash: master
-      REPO_PATH_OpenClash : "OpenClash"
+      REPO_PATH_OpenClash: "OpenClash"
     steps:
     - name: Get Commit Hash
       id: getHash
@@ -141,9 +141,9 @@ jobs:
   Checkd:
     runs-on: ubuntu-latest
     env:
-      REPO_URL_OpenClash: https://github.com/xiaorouji/openwrt-passwall
-      REPO_BRANCH_OpenClash: luci
-      REPO_PATH_OpenClash : "PassWall"
+      REPO_URL_PassWall: https://github.com/xiaorouji/openwrt-passwall
+      REPO_BRANCH_PassWall: luci
+      REPO_PATH_PassWall: "PassWall"
     steps:
     - name: Get Commit Hash
       id: getHash
