--- a/armv8/armv8.config
+++ b/armv8/armv8.config
@@ -7003,7 +7003,7 @@ CONFIG_PACKAGE_v2ray-core=y
 # CONFIG_PACKAGE_v2ray-example is not set
 # CONFIG_PACKAGE_v2ray-extra is not set
 # CONFIG_PACKAGE_vallumd is not set
-CONFIG_PACKAGE_verysync=y
+# CONFIG_PACKAGE_verysync is not set
 CONFIG_PACKAGE_vlmcsd=y
 # CONFIG_PACKAGE_vncrepeater is not set
 # CONFIG_PACKAGE_vnstat is not set
