--- a/armv8/armv8.config
+++ b/armv8/armv8.config
@@ -441,6 +441,7 @@ CONFIG_FEED_packages=y
 CONFIG_FEED_luci=y
 CONFIG_FEED_routing=y
 CONFIG_FEED_telephony=y
+CONFIG_FEED_oui=y
 CONFIG_FEED_Jejz=y
 
 #
@@ -7070,6 +7071,34 @@ CONFIG_PACKAGE_wwan=y
 CONFIG_PACKAGE_xray-core=y
 # CONFIG_PACKAGE_xray-example is not set
 # end of Network
+
+#
+# Oui
+#
+
+#
+# Applications
+#
+# CONFIG_PACKAGE_oui-app-acl is not set
+# CONFIG_PACKAGE_oui-app-backup is not set
+# CONFIG_PACKAGE_oui-app-demo is not set
+# CONFIG_PACKAGE_oui-app-dhcp-lease is not set
+# CONFIG_PACKAGE_oui-app-home is not set
+# CONFIG_PACKAGE_oui-app-layout is not set
+# CONFIG_PACKAGE_oui-app-login is not set
+# CONFIG_PACKAGE_oui-app-stations is not set
+# CONFIG_PACKAGE_oui-app-system is not set
+# CONFIG_PACKAGE_oui-app-upgrade is not set
+# CONFIG_PACKAGE_oui-app-user is not set
+# end of Applications
+
+# CONFIG_PACKAGE_oui-rpc-core is not set
+# CONFIG_PACKAGE_oui-ui-core is not set
+CONFIG_OUI_LOGIN_VIEW="login"
+CONFIG_OUI_LAYOUT_VIEW="layout"
+CONFIG_OUI_HOME_VIEW="home"
+# CONFIG_OUI_USE_HOST_NODE is not set
+# end of Oui
 
 #
 # Sound
