--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -185,7 +185,7 @@ jobs:
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
         
-        sed -i 's/CONFIG_LINUX_5_15=y/CONFIG_LINUX_5_4=y/g' .config
+        sed -i 's/CONFIG_LINUX.*/CONFIG_LINUX_5_4=y/g' .config
         
         sed -i 's/KERNEL_PATCHVER:=*.*/KERNEL_PATCHVER:=5.4/g' target/linux/x86/Makefile
         
@@ -437,7 +437,7 @@ jobs:
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
         
-        sed -i 's/CONFIG_LINUX_5_15=y/CONFIG_LINUX_5_10=y/g' .config
+        sed -i 's/CONFIG_LINUX.*/CONFIG_LINUX_5_10=y/g' .config
         
         sed -i 's/KERNEL_PATCHVER:=*.*/KERNEL_PATCHVER:=5.10/g' target/linux/x86/Makefile
         
@@ -689,7 +689,7 @@ jobs:
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
         
-        sed -i 's/CONFIG_LINUX_5_15=y/CONFIG_LINUX_5_15=y/g' .config
+        sed -i 's/CONFIG_LINUX.*/CONFIG_LINUX_5_15=y/g' .config
         
         sed -i 's/KERNEL_PATCHVER:=*.*/KERNEL_PATCHVER:=5.15/g' target/linux/x86/Makefile
 
@@ -939,7 +939,7 @@ jobs:
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
         
-        sed -i 's/CONFIG_LINUX_5_15=y/CONFIG_LINUX_6_0=y/g' .config
+        sed -i 's/CONFIG_LINUX.*/CONFIG_LINUX_6_0=y/g' .config
         
         sed -i 's/KERNEL_PATCHVER:=*.*/KERNEL_PATCHVER:=6.0/g' target/linux/x86/Makefile
         
