--- a/x86/x86.config
+++ b/x86/x86.config
@@ -2530,7 +2530,7 @@ CONFIG_PACKAGE_kmod-i40e=y
 CONFIG_PACKAGE_kmod-iavf=y
 CONFIG_PACKAGE_kmod-ifb=y
 # CONFIG_PACKAGE_kmod-igb is not set
-CONFIG_PACKAGE_kmod-igb-intel=y
+# CONFIG_PACKAGE_kmod-igb-intel is not set
 CONFIG_PACKAGE_kmod-igbvf=y
 CONFIG_PACKAGE_kmod-igc=y
 # CONFIG_PACKAGE_kmod-ipvlan is not set
