--- a/.github/workflows/ARMv8-OpenWrt.yml
+++ b/.github/workflows/ARMv8-OpenWrt.yml
@@ -103,7 +103,8 @@ jobs:
         echo "hash=$Hash" >> $GITHUB_ENV
         echo "DATE=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
         echo "TAG=$(date "+%Y%m%d")" >> $GITHUB_ENV
-        echo "DATE1=$(date "+%Y-%m-%d")" >> $GITHUB_ENV
+        echo "TAG=$(date "+%Y%m%d")" >> $GITHUB_ENV
+        echo "start=$(date +%s)" >> $GITHUB_ENV
     
     - name: Package Armvirt as OpenWrt
       if: (!cancelled())
@@ -149,6 +150,17 @@ jobs:
           - hash: ${{ env.hash }}
         artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
         
+    - name: Completion time 
+      run: |
+        echo "DATE1=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
+        end=$(date +%s)
+        seconds=$(( end - start ))
+        hour=$(( $seconds/3600 ))
+        min=$(( ($seconds-${hour}*3600)/60 ))
+        sec=$(( $seconds-${hour}*3600-${min}*60 ))
+        HMS=`echo ${hour}:${min}:${sec}`
+        echo "time=$HMS" >> $GITHUB_ENV
+        
     - name: Telegram notification upload success
       uses: appleboy/telegram-action@master
       with:
@@ -157,6 +169,8 @@ jobs:
         message: |
           💥${{ env.PRODUCT_NAME }}打包完成
           开始时间：${{ env.DATE }}
+          完成时间：${{ env.DATE1 }}
+          编译耗时：${{ env.time }}
           🎈🎈🎈 更新信息 🎈🎈🎈
           作者: ${{ env.author }}
           时间: ${{ env.date }}
