--- a/.github/workflows/Build_ARMv8.yml
+++ b/.github/workflows/Build_ARMv8.yml
@@ -320,8 +320,8 @@ jobs:
         tag: ${{ env.PRODUCT_NAME }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
-          - ⭐️默认 IP：192.168.8.8 默认密码：password
-          - 🔥此为 ARMv8(带docker) ，集成一些日常常用插件
+          - ⭐️默认 IP：192.168.8.8 默认密码：无密码
+          - 🔥此为 ARMv8-Docker 固件，集成一些日常常用插件
           - 安装到 EMMC：系统 → 晶晨宝盒 → 安装 OpenWrt → 选择型号 → 安装
           - 升级 OpenWrt：系统 → 晶晨宝盒 → 手动上传更新 或者 在线下载更新
           - 常见问题及注意事项请参考恩山F大➦[最新帖](https://www.right.com.cn/forum/thread-4076037-1-1.html)
