--- a/.github/workflows/ARMv8-ROOTFS.yml
+++ b/.github/workflows/ARMv8-ROOTFS.yml
@@ -30,7 +30,7 @@ env:
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
   FILE_NAME: ARMv8-ROOTFS
-  PRODUCT_NAME: ARMv8
+  PRODUCT_NAME: ARMv8-ROOTFS
 
 jobs:
   build:
