Update and rename Build_X86_64（个人双开）.yml to Build_X86_64(个人双开).yml

--- a/.github/workflows/Build_X86_64(个人双开).yml
+++ b/.github/workflows/Build_X86_64(个人双开).yml
@@ -4,7 +4,7 @@
 # By：Jejz
 #===============================================
 
-name: Build_x86_64（个人双开）
+name: Build_x86_64(个人双开)
 
 on:
   repository_dispatch:
