--- a/.github/workflows/ARMv8-config.yml
+++ b/.github/workflows/ARMv8-config.yml
@@ -105,8 +105,9 @@ jobs:
         cd ${{ env.CONFIG }}config
         ls
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
-        echo "::set-output name=status::success"
+        echo "status=success" >> $GITHUB_OUTPUT
         echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+        
     - name: 上传config
       uses: actions/upload-artifact@main
       if: steps.organize.outputs.status == 'success' && !cancelled()
@@ -120,7 +121,7 @@ jobs:
       run: |
         echo "::set-output name=release_tag::$(date +"%Y.%m.%d-%H%M")"
         touch release.txt
-        echo "::set-output name=status::success"
+        echo "status=success" >> $GITHUB_OUTPUT
         
     - name: 上传config文件并发布
       uses: softprops/action-gh-release@v1
