--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -108,7 +108,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@main
+      uses: actions/checkout@v3
 
     - name: Check server configuration
       run: |
@@ -303,7 +303,7 @@ jobs:
 
     - name: Create release
       id: release
-      uses: ncipollo/release-action@main
+      uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
         name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」固件
@@ -358,7 +358,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@main
+      uses: actions/checkout@v3
 
     - name: Check server configuration
       run: |
@@ -553,7 +553,7 @@ jobs:
 
     - name: Create release
       id: release
-      uses: ncipollo/release-action@main
+      uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
         name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」固件
@@ -608,7 +608,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@main
+      uses: actions/checkout@v3
 
     - name: Check server configuration
       run: |
@@ -803,7 +803,7 @@ jobs:
 
     - name: Create release
       id: release
-      uses: ncipollo/release-action@main
+      uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
         name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」固件
@@ -858,7 +858,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@main
+      uses: actions/checkout@v3
       
     - name: Check server configuration
       run: |
@@ -1053,7 +1053,7 @@ jobs:
 
     - name: Create release
       id: release
-      uses: ncipollo/release-action@main
+      uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
         name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }}」固件
