--- a/.github/workflows/Build_ARMv8.yml
+++ b/.github/workflows/Build_ARMv8.yml
@@ -84,7 +84,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@main
+      uses: actions/checkout@v3
       
     - name: Check server configuration
       run: |
@@ -269,7 +269,7 @@ jobs:
 
     - name: Create release
       id: release
-      uses: ncipollo/release-action@main
+      uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
         name: ${{ env.DATE }} 🚫「 ${{ env.FILE_NAME }} 」
@@ -309,7 +309,7 @@ jobs:
         path: ${{ env.PACKAGED_OUTPUTPATH }}/   
         
     - name: Upload openwrt to release
-      uses: ncipollo/release-action@main
+      uses: ncipollo/release-action@v1
       if: env.PACKAGED_STATUS == 'success'
       with:
         name: ${{ env.DATE }} 「 ${{ env.PRODUCT_NAME }} 」固件
