Update and rename Update synchronization checke.yml to Update synchronization checker.yml

--- a/.github/workflows/Update synchronization checker.yml
+++ b/.github/workflows/Update synchronization checker.yml
@@ -5,7 +5,7 @@
 # By：Jejz
 #===============================================
 
-name: Update synchronization checke
+name: Update synchronization checker
 
 on:
   repository_dispatch:
